[tool.poetry]
name = "bmtron"
version = "0.1.0"
description = ""
authors = ["joeggg <ninjoetsu@gmail.com>"]
readme = "README.md"
packages = [{include = "bmtron"}]

[tool.poetry.dependencies]
python = "~3.11"
pyzmq = "^25.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pylint = "^2.17.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
